# Rust

./: .gitignore  README.md
01GLFW3/: Cargo.toml  build.rs
01GLFW3/lib/: libglew.lib  libglfw3.lib
01GLFW3/src/: main.rs
02Wasm/: angular.json  package.json
02Wasm/src/app/pages/rust-ems/: rust-ems.component.ts
02Wasm/src/app/pages/web-gpu/: web-gpu.component.html  web-gpu.component.ts
02Wasm/src/assets/wasm/__wgpu-lib/: Cargo.toml
02Wasm/src/assets/wasm/__wgpu-lib/src/: lib.rs
02Wasm/src/assets/wasm/_wgpu-lib/: Cargo.toml
02Wasm/src/assets/wasm/_wgpu-lib/src/: app.rs  gfx_state.rs  input_handler.rs  lib.rs
02Wasm/src/assets/wasm/_wgpu-lib/src/gfx_state/: camera.rs  model.rs  resources.rs  texture.rs
02Wasm/src/assets/wasm/ems-lib/: Cargo.toml
02Wasm/src/assets/wasm/ems-lib/.cargo/: config.toml
02Wasm/src/assets/wasm/ems-lib/lib/libems/: Cargo.toml
02Wasm/src/assets/wasm/ems-lib/lib/libems/src/: lib.rs
02Wasm/src/assets/wasm/ems-lib/lib/libgl/: Cargo.toml
02Wasm/src/assets/wasm/ems-lib/lib/libgl/src/: lib.rs
02Wasm/src/assets/wasm/ems-lib/lib/libglfw3/: Cargo.toml
02Wasm/src/assets/wasm/ems-lib/lib/libglfw3/src/: lib.rs
02Wasm/src/assets/wasm/ems-lib/src/: gles2_renderer.rs  lib.rs
02Wasm/src/assets/wasm/ems-lib/src/ffi/: ffi.rs
02Wasm/src/assets/wasm/wgpu-lib/: Cargo.toml
02Wasm/src/assets/wasm/wgpu-lib/src/: app.rs  graphics.rs  lib.rs  resources.rs
02Wasm/src/assets/wasm/wgpu-lib/src/graphics/: camera.rs  model.rs  resources.rs  texture.rs
02Wasm/src/assets/wasm/wgpu-template-master/: Cargo.toml
02Wasm/src/assets/wasm/wgpu-template-master/src/: app.rs  graphics.rs  main.rs
02WebGPU/: angular.json  package-lock.json  package.json
02WebGPU/docs/: index.html  main-OCJ5X7HL.js
02WebGPU/src/: index.html
02WebGPU/src/app/: app.routes.ts
02WebGPU/src/app/shared/menu/: menu.component.html  menu.component.ts
02WebGPU/src/assets/wasm/wgpu-lib/src/: lib.rs  resources.rs
03Emscripten/: Cargo.toml  angular.json
03Emscripten/.cargo/: config
03Emscripten/src/: index.html
03Emscripten/src/app/: app.config.ts  app.routes.ts
03Emscripten/src/app/pages/rust-ems/: rust-ems.component.ts
03Emscripten/src/app/shared/menu/: menu.component.html  menu.component.ts
03Emscripten/src/assets/wasm/ems-lib/: description.txt
03Emscripten/src/assets/wasm/wgpu-lib/: Cargo.toml
03Emscripten/src/assets/wasm/wgpu-lib/src/: resources.rs
03Vulkan/: Cargo.toml  build.rs
03Vulkan/.cargo/: config.toml
03Vulkan/src/: 32_secondary_command_buffers.rs  triangle.rs
04Vulkano/src/obj_loader/: face.rs
04Vulkano/src/shaders/: ambient.frag
docs/: 404.html  index.html  main-GUM3CYDL.js  main-HHJNVUDM.js  main-Z7W5LERV.js  main-ZI6OQRYT.js  wgpu_lib_bg.wasm
docs/assets/wasm/wgpu-lib/pkg/: package.json  wgpu_lib.d.ts  wgpu_lib.js  wgpu_lib_bg.wasm.d.ts
