[package]
name = "rust-ems-wasm"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-ctypes = "0.1.1"
rs-alloc = "0.0.1"
rs-streams = "0.1.7"
libc = "0.2.76"
rs-math3d = "0.9.5"
glfw3 = { path = "lib/libglfw3" }
gl = { path = "lib/libgl" }
ems = { path = "lib/libems" }


[profile]
[profile.release]
# or "z"
opt-level = "z"
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
panic = "abort"


[profile.dev]
#opt-level = "z"
overflow-checks = false
debug-assertions = false
# lto = true
incremental = false
panic = "abort"