[package]
name = "wgpu-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.11.8"
pollster = "0.4.0"
log = "0.4"
tobj = { version = "4.0.3", features = ["async"]}
winit = { version = "0.30.5", features = ["rwh_05"] }
instant = "0.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] , package = "getrandom"}
reqwest = { version = "0.12.23" }
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection", "Location"] }
wgpu = { version = "26.0.1", default-features = false, features = ["webgl", "wgsl", "webgpu"] }


[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]