[package]
name = "wgpu-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
winit = "0.26"
instant = "0.1"
getrandom = { version = "0.2.16", features = ["js"] }
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.13", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
